fix: align with content max-width

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,7 +12,7 @@ header nav {
   transform: translateX(-50%);
   z-index: 1;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1264px;
   height: var(--nav-height);
   padding: 0 1rem;
   background-color: var(--background-color);
